Arrow and overflow fix

--- a/app/assets/stylesheets/scss/partials/form_style.css.scss
+++ b/app/assets/stylesheets/scss/partials/form_style.css.scss
@@ -27,7 +27,7 @@ input:focus:placeholder {
 
 .message_row {
 	overflow: visible;
-	height: 100px !important;
+	height: 1px !important;
 }
 .message_wrapper{
   background-color: #ffffff;
@@ -78,7 +78,7 @@ input:focus:placeholder {
 	overflow: hidden;
 	position: absolute;
 	left: -14px;
-	top: 45px;
+	top: 40px;
 }
 
 .arrow span{
